# a26-shell

./: .gitignore  README.md
notes/a26-shell/: APPLE-KEYBOARD-LAYOUT.md  README.md  ui-redesign-verification.txt
scripts/a26-shell/: audio-start.sh  autostart.sh  build-audio-bridge.sh  build.sh  common.sh  ctl.sh  desktop-start.sh  desktop-stop.sh  generate-config.py  install-audio.sh  install-autostart.sh  install.sh  prepare-assets.py  screenshot.sh  start.sh  stop.sh  test.sh  wifi-start.sh  wifi-stop.sh
scripts/device/: 90-moon-autostart.sh  a26-android-graphics-restore.sh  a26-enter-chroot.sh  a26-xorg-persistent-session.sh  a26-xorg-safety-watchdog.sh  a26-xorg-takeover.sh  moon-audio-start.sh  moon-audio-stop.sh  moon-boot-supervisor.sh
src/a26-audio-bridge/moon/audio/: Bridge.java
src/a26-shell/: Cargo.toml  README.md
src/a26-shell/assets/: README.md  system-app.bgrx
src/a26-shell/src/: audio.rs  config.rs  font.rs  input.rs  ipc.rs  keyboard.rs  main.rs  model.rs  status.rs  ui.rs  volume.rs
