[package]
name = "a26-shell"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Minimal touch-first X11 window manager and phone shell for the Galaxy A26"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
subtle = "2.6"
libc = "0.2"
x11rb = { version = "0.14", features = ["xinput", "randr", "dpms"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
